@@ -12,7 +12,7 @@ from django.core.signals import request_finished
 from django.db import models
 
 from sentry.db.models import Model, FlexibleForeignKey, sane_repr
-from sentry.db.models.fields import UnicodePickledObjectField
+from sentry.db.models.fields import EncryptedPickledObjectField
 from sentry.db.models.manager import BaseManager
 from sentry.utils.cache import cache
 
@@ -123,7 +123,7 @@ class OrganizationOption(Model):
 
     organization = FlexibleForeignKey('sentry.Organization')
     key = models.CharField(max_length=64)
-    value = UnicodePickledObjectField()
+    value = EncryptedPickledObjectField()
 
     objects = OrganizationOptionManager()
 
