@@ -12,7 +12,7 @@ from django.core.signals import request_finished
 from django.db import models
 
 from sentry.db.models import Model, FlexibleForeignKey, sane_repr
-from sentry.db.models.fields import UnicodePickledObjectField
+from sentry.db.models.fields import EncryptedPickledObjectField
 from sentry.db.models.manager import BaseManager
 from sentry.utils.cache import cache
 
@@ -116,7 +116,7 @@ class ProjectOption(Model):
 
     project = FlexibleForeignKey('sentry.Project')
     key = models.CharField(max_length=64)
-    value = UnicodePickledObjectField()
+    value = EncryptedPickledObjectField()
 
     objects = ProjectOptionManager()
 
