@@ -137,11 +137,13 @@ class NotificationPlugin(Plugin):
         # determine members default settings
         members_to_check = set(u for u in member_set if u not in alert_settings)
         if members_to_check:
-            disabled = set(UserOption.objects.filter(
-                key='subscribe_by_default',
-                value='0',
-                user__in=members_to_check,
-            ).values_list('user', flat=True))
+            disabled = set((
+                uo.user_id for uo in UserOption.objects.filter(
+                    key='subscribe_by_default',
+                    user__in=members_to_check,
+                )
+                if uo.value == '0'
+            ))
             member_set = [x for x in member_set if x not in disabled]
 
         return member_set
