@@ -3,7 +3,7 @@ from __future__ import absolute_import
 from cryptography.fernet import Fernet
 
 from sentry.testutils import TestCase
-from sentry.utils.encryption import EncryptionManager
+from sentry.utils.encryption import EncryptionManager, MARKER
 
 
 class EncryptionManagerTest(TestCase):
@@ -12,7 +12,7 @@ class EncryptionManagerTest(TestCase):
             ('1', Fernet('J5NxyG0w1OyZEDdEOX0Nyv2upm5H3J35rTEb1jEiVbs=')),
         ))
         value = manager.encrypt('hello world')
-        assert value.startswith('1$')
+        assert value.startswith(u'{}1$'.format(MARKER))
         result = manager.decrypt(value)
         assert result == 'hello world'
 
@@ -27,7 +27,7 @@ class EncryptionManagerTest(TestCase):
 
         value2 = manager.encrypt('hello world')
         assert value2 != value
-        assert value2.startswith('2$')
+        assert value2.startswith(u'{}2$'.format(MARKER))
 
     def test_no_schemes(self):
         manager = EncryptionManager(schemes=())
